02. usefull-things-452-menu. UI.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,30 @@
     </head>
 
     <body>
-        start
+        <div class="menu-drop-zone"></div>
+
+        <div class="menu-drawer">
+            <div class="menu-logo">
+                <img src="./src/assets/images/logo.png" alt="" />
+            </div>
+
+            <div class="menu-items">
+                <div class="menu-item">
+                    <a href="/work">Work</a>
+                </div>
+                <div class="menu-item">
+                    <a href="/manifesto">Manifesto</a>
+                </div>
+                <div class="menu-item">
+                    <a href="/contact">Contact</a>
+                </div>
+            </div>
+
+            <div class="menu-toggler">
+                <span></span>
+                <span></span>
+            </div>
+        </div>
 
         <script type="module" src="./src/assets/js/main.js"></script>
     </body>
