--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             </div>
         </div>
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/Draggable.min.js"></script>
+
         <script type="module" src="./src/assets/js/main.js"></script>
     </body>
 </html>
